package Strategy;

public interface PaymentType {
    void pay(double amount);
}
